--- a/assignment.html
+++ b/assignment.html
@@ -10,7 +10,6 @@
 			display: block;
 		}
 	</style>
-	<title></title>
 </head>
 <body>
 <div id="play">
@@ -18,36 +17,36 @@
 <script type="text/javascript">
 
 	var player=document.getElementById("play");
-	document.addEventListener("keyup",move);
+	document.addEventListener("keydown",move);
 	var xpos=100;
 	var ypos=100;
-	var permove=100;
+	var permove=20;
 	var rotateflag=false;//required because pressing r twice breaks the code
 	var angle=0;
 	var interval;
 	player.style='transform:translate('+xpos+' px ,'+ypos+'px);transform:rotate('+angle+'deg);';
 	function move(){
 		var k=event.key;
-		if(k=="ArrowRight"){
+		if(k=="ArrowRight"||k=="d"){
 			xpos+=permove;
 		}
-		if(k=="ArrowLeft"){
+		if(k=="ArrowLeft"||k=="a"){
 			xpos-=permove;
 		}
-		if(k=="ArrowUp"){
+		if(k=="ArrowUp"||k=="w"){
 			ypos-=permove;
 		}
-		if(k=="ArrowDown"){
+		if(k=="ArrowDown"||k=="s"){
 			ypos+=permove;
 		}
-		if(k=='r' && rotateflag==false){
+		if(k=='q' && rotateflag==false){
 			interval=setInterval(function(){
 				angle++;
 				player.style='transform:translate('+xpos+'px,'+ypos+'px) rotate('+angle+'deg);\n';
 			},3);
 			rotateflag=true;
 		}
-		if(k=='s'){
+		if(k=='e'){
 			clearInterval(interval);
 			player.style='transform:translate('+xpos+'px,'+ypos+'px) rotate('+angle+'deg);\n';
 			rotateflag=false;
