--- a/assignment.html
+++ b/assignment.html
@@ -1,64 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<style type="text/css">
-		div{
-			background:url("download.png")  no-repeat;
-			width:200px;
-			height:200px;
-			border:1px solid black;
-			display: block;
-		}
-	</style>
+	<link rel="stylesheet" type="text/css" href="css/mystyle.css">
 </head>
 <body>
-<div id="play">
-</div>
-<script type="text/javascript">
-
-	var player=document.getElementById("play");
-	document.addEventListener("keydown",move);
-	var xpos=100;
-	var ypos=100;
-	var permove=20;
-	var rotateflag=false;//required because pressing r twice breaks the code
-	var angle=0;
-	var interval;
-	player.style='transform:translate('+xpos+' px ,'+ypos+'px);transform:rotate('+angle+'deg);';
-	function move(){
-		var k=event.key;
-		if(k=="ArrowRight"||k=="d"){
-			xpos+=permove;
-		}
-		if(k=="ArrowLeft"||k=="a"){
-			xpos-=permove;
-		}
-		if(k=="ArrowUp"||k=="w"){
-			ypos-=permove;
-		}
-		if(k=="ArrowDown"||k=="s"){
-			ypos+=permove;
-		}
-		if(k=='q' && rotateflag==false){
-			interval=setInterval(function(){
-				angle++;
-				player.style='transform:translate('+xpos+'px,'+ypos+'px) rotate('+angle+'deg);\n';
-			},3);
-			rotateflag=true;
-		}
-		if(k=='e'){
-			clearInterval(interval);
-			player.style='transform:translate('+xpos+'px,'+ypos+'px) rotate('+angle+'deg);\n';
-			rotateflag=false;
-		}
-		player.style='transform:translate('+xpos+'px,'+ypos+'px) rotate('+angle+'deg);\n';
-
-	}
-
-	
-		
-
-</script>
+	<div id="play">
+	</div>
+	<script type="text/javascript" src="js/myscript.js">
+	</script>
 </body>
-
 </html>
